ExpMaterialTable: consistent initialization (#5348)